# tp-paia

./: .env.example  .gitignore  Dockerfile  PROFILES.md  README.md  TODO.md  alembic.ini  docker-compose.yaml  pyproject.toml
app/: main.py
app/alembic/: env.py  utils.py
app/alembic/versions/: 2026_05_13_1853-da485244e2ca_conversations_setup.py  2026_05_22_1200-2d7d9b3f0e1a_buildings_catalog.py  2026_05_30_1200-6f51c0ad8b52_conversation_metadata.py  2026_06_09_1200-1c2d3e4f5a6b_conversation_metrics.py
app/api/: deps.py  main.py
app/api/v1/: __init__.py  admin_buildings.py  main.py  user.py
app/core/: config.py  http.py  logger.py  pagination.py
app/core/auth/: __init__.py  deps.py  fake_users.py  jwt.py  passwords.py  router.py  users.py
app/core/media/: convert_audio.py
app/db/: base.py  config.py
app/db/crud/: user.py
app/db/models/: __init__.py  building.py  user.py
app/db/repositories/: __init__.py  base.py  buildings.py  exceptions.py  types.py
app/exceptions/: custom_exceptions.py  handlers.py
app/modal/: docling_app.py
app/services/: example.py
app/services/agent/: __init__.py  anthropic.py  base.py  exceptions.py  factory.py  guardrails.py  (+4 more)
metrics/: summary.json
metrics/conversations/: 2ed2f6e3-74be-4763-a2e2-3355972af35c.json  2f532600-d035-4428-a75a-101ecba33168.json  37e1b15c-57bb-4594-a20c-6484304503d6.json  40eeae7f-0d95-4b60-baef-1c07e7bd6103.json  4621c7ed-4dc1-4584-a566-f22eed350035.json  49f08074-88e3-4b0f-be53-3bd9357adefa.json  5bf7c222-b249-44fd-962a-764b5c5e2fbe.json  5fe4a615-d28e-4fec-b28f-70dc64615dc4.json  858973ea-829f-4356-b4f1-3051cc57e375.json  8da29a55-54f1-4486-91b2-e36912433720.json  b069a637-0742-496e-ba49-d8cede640eee.json  b79f9576-a76f-4f28-bbba-2e139f4b543f.json  c8594a30-3c06-448d-9c14-33c14f0563a5.json  da9deef8-98d4-406a-ba20-7389988a7408.json  de65fbbe-56bc-4edf-a7a2-f057d11adcc3.json  e1920495-0809-4078-91c8-e44da8226b4f.json  e2076f41-b7dc-4164-8882-0c74fd1a716e.json  f859c03c-0281-4b9d-8d07-9f06e4b76645.json  ffd3300b-90ae-4e67-bc46-e986fd9e0a59.json
scripts/: deploy_modal.sh  export_conversation_metrics.py  mark_dropped_conversations.py  quality.sh  reindex_buildings.py  run.py  run.sh  seed_buildings.py
tests/: conftest.py  test_auth.py
tests/db/: conftest.py
tests/scripts/: test_export_conversation_metrics.py  test_seed_buildings.py
(+112 files in other folders)
