[project]
name = "fastapi-template"
version = "0.1.0"
description = "FastAPI template"
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = [
    "fastapi[standard]",
    "uvicorn",
    "pydantic",
    "pydantic-settings",
    "python-jose",
    "passlib[bcrypt]",
    "httpx",
    "email-validator",
    "bcrypt==4.3.0",
    "requests",
    "sqlmodel>=0.0.27",
    "psycopg[binary]>=3.2.12",
    "boto3>=1.40.70",
    "python-magic>=0.4.27",
    "redis[hiredis]>=7.4.0",
    "openai>=2.32.0",
    "anthropic>=0.42.0",
    "elevenlabs>=2.45.0",
    "docling>=2.91.0",
    "modal>=1.4.2",
    "celery>=5.4.0",
    "qdrant-client>=1.15.0",
    "bm25s>=0.3.9",
]

[project.optional-dependencies]
docling = [
    "docling>=2.30.0",
]
modal = [
    "modal>=0.65.0",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "mypy",
    "ruff",
    "pre-commit",
    "types-passlib",
    "coverage",
    "boto3-stubs[s3]",
    "alembic",
    "fakeredis>=2.35.1",
    "testcontainers[postgres]>=4.8.0",
]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
exclude = ["alembic"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG001", # unused arguments in functions
    # "T201",   # print statements are not allowed
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
    "UP007", # Use X | Y for type annotations
    "W293",  # blank line contains whitespace
]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.mypy]
mypy_path = ["app"]
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
exclude = ["venv", ".venv", "alembic", "modal_docling_app.py"]
strict = true

[tool.coverage.run]
source = ["app"]
dynamic_context = "test_function"

[tool.coverage.report]
show_missing = true
sort = "-Cover"

[tool.coverage.html]
show_contexts = true
